# Coding-1-Data-Management-and-Analysis-with-Python

./: .gitignore  AGENTS.md  NOTICE.md  README.md  pyproject.toml
.github/workflows/: checks.yml
data/: README.md
exercises/: session03-coding-basics-i.ipynb  session04-coding-basics-ii.ipynb  session05-basic-structures-i.ipynb  session06-basic-structures-ii.ipynb  session07-data-io-i.ipynb  session08-data-io-ii.ipynb  session09-pandas-basics-i.ipynb  session10-pandas-basics-ii.ipynb  session11-pandas-munging-i.ipynb  session12-pandas-munging-ii.ipynb  session14-plotnine-i.ipynb  session15-plotnine-ii.ipynb  session16-matplotlib.ipynb  session17-control-flow-i.ipynb  session18-control-flow-ii.ipynb  session19-data-exploration-i.ipynb  session20-data-exploration-ii.ipynb  session21-functions-i.ipynb  session22-functions-ii.ipynb  session23-exceptions.ipynb  session24-regression-i.ipynb  session25-regression-ii.ipynb
lectures/lecture00-intro/: README.md  getting_started.ipynb  setup.md
lectures/lecture01-coding-basics/: README.md  coding_basics.ipynb
lectures/lecture02-basic-structures/: README.md  basic_structures.ipynb
lectures/lecture03-data-IO/: README.md  data_IO.ipynb
lectures/lecture04-pandas-basics/: 01_pandas_basics.ipynb  02_pandas_data_munging.ipynb  README.md
lectures/lecture05-graphs-basics/: 01_plotnine_intro.ipynb  02_matplotlib_intro.ipynb  README.md
lectures/lecture06-conditionals/: README.md  conditionals_and_control_flows.ipynb
schedule/: session_plan.md
scripts/: check_no_pip.py  check_notebooks.py  fetch_data.py
(+8 files in other folders)
